Bug 33692 - Drag and drop copying not working for shape (rectangle etc.)
Summary: Drag and drop copying not working for shape (rectangle etc.)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords:
: 58245 66878 86876 (view as bug list)
Depends on:
Blocks: Writer-UX Cut-Copy
  Show dependency treegraph
 
Reported: 2011-01-29 07:46 UTC by Symurg
Modified: 2017-11-19 10:44 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
The bug can be reproduced with this document. (14.65 KB, application/vnd.oasis.opendocument.text)
2012-01-09 02:19 UTC, Bernard Gisin
Details
Bug33692_Control_Drag_Drop-1.odt (14.35 KB, application/vnd.oasis.opendocument.text)
2013-05-09 06:10 UTC, Bernard Gisin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Symurg 2011-01-29 07:46:49 UTC
Both on Windows and Linux(Ubuntu, Pardus) I' ve been having a cloning issue in Writer.When i want to make a clone of a shape(rectangle etc.) simply by holding ctrl key and dragging the mouse, it just doesn't work. Sometimes, having tried many times, the previously created clones show up all together. 
Thanks for reply.
Comment 1 ubhh11 2011-06-18 09:07:23 UTC
The problem still exists in 3.3.2.
Comment 2 Bernard Gisin 2012-01-09 02:08:05 UTC
This bug still exist in versions 3.4.4 and 3.5.0 beta2 under windows XP SP3.
This bug cannot be reproduced systematically, but sometimes, copying a shape using drag and drop while pressing the control key, copy well the shape, but it is not displayed. 
The copied shape can always be seen by asking for a print preview.
bgork@juggling.ch
Comment 3 Bernard Gisin 2012-01-09 02:19:54 UTC
Created attachment 55324 [details]
The bug can be reproduced with this document.

The document is a Libre Office document and describe how to reproduce the bug.
Comment 4 A (Andy) 2013-05-05 12:55:13 UTC
I tried it as described, but it does not work for me with LO 4.0.2.2 (Win7 Home, 64bit.

Steps Done:
1. Open the attachment with WRITER
2. Press the Ctrl Key and make a left mouse click on the ellipse in the document
3. Try to move the ellipse with the mouse pointer (still holding the Ctrl key) somewhere to the left
4. Press the PAGE PREVIEW button in the top toolbar and alternatively go to the menu FILE -> PRINT -> tab GENERAL

Result:
The ellipse was not copied, also not after pressing the PAGE PREVIEW button and also not with the PRINT PREVIEW.

Is there maybe a misunderstanding from my side?
Could you please provide more information how to reproduce it?

changed the status
Comment 5 Bernard Gisin 2013-05-09 06:10:04 UTC
Created attachment 79041 [details]
Bug33692_Control_Drag_Drop-1.odt

Hello,
I use this drag and drop while pressing the control key for years, in Word 
97, OpenOffice and LibreOffice. This way for duplicating an image is at 
least 5 years old, but in OpenOffice and in LibreOffice, the copy is not 
always visible.

I experimented it again with the join file and it works well, the copy is 
visible when I press the print preview button.
1) You can left-click the image or press control first.
2) Still pressing the left click move it.
3) Know it's important to have the control key pressed.
4) Release the left click, before releasing the control key
5) The image has been copied and is not visible, but after pressing the 
print preview button, it becomes visible.

The order I do it usually is :
1) left-click on the image
2) move it, while holding the left click
3) press the control key
4) release the left-click
5) release the control key
6) to see the result, press the print preview button.

I just did it over ten times now with LibreOffice 3.6.5.2 and it worked 
each time. It worked with all versions of LibreOffice I used and with all 
versions of OpenOffice since versions 3.x.
Sometimes, I make several copies before pressing the print preview button 
to see all the copies at ones.

You can also try to draw you own image and duplicate it as described above.

If I can do more, contact me again.

Thank you for trying to improve this functionality, Bernard Gisin.


bugzilla-daemon@freedesktop.org a écrit :
> A <mailto:stgohi-lobugs@yahoo.de> changed bug 33692 
> <https://bugs.freedesktop.org/show_bug.cgi?id=33692>
> What 	Removed 	Added
> Status 	ASSIGNED 	NEEDINFO
>
>
>
> *Comment # 4 <https://bugs.freedesktop.org/show_bug.cgi?id=33692#c4> on 
> bug 33692 <https://bugs.freedesktop.org/show_bug.cgi?id=33692> from A 
> <mailto:stgohi-lobugs@yahoo.de> *
> I tried it as described, but it does not work for me with LO 4.0.2.2 
> (Win7 Home, 64bit. Steps Done: 1. Open the attachment with WRITER 2. 
> Press the Ctrl Key and make a left mouse click on the ellipse in the 
> document 3. Try to move the ellipse with the mouse pointer (still holding 
> the Ctrl key) somewhere to the left 4. Press the PAGE PREVIEW button in 
> the top toolbar and alternatively go to the menu FILE -> PRINT -> tab 
> GENERAL Result: The ellipse was not copied, also not after pressing the 
> PAGE PREVIEW button and also not with the PRINT PREVIEW. Is there maybe a 
> misunderstanding from my side? Could you please provide more information 
> how to reproduce it? changed the status
> ---------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You are on the CC list for the bug.
>
Comment 6 Jean-Baptiste Faure 2013-11-30 14:27:58 UTC
Still reproducible with version 4.2.0.0.beta1 under Ubuntu 13.10 x86-64.
Showing the preview make the copy visible and it is still visible when returned in the edit view.
So this bug seems to be a problem in updating the edit view after the copy.

Best regards. JBF
Comment 7 Bernard Gisin 2013-12-01 16:06:27 UTC
I'm using now GNU/Linux XUbuntu 13.04, with libreoffice
Version 4.0.6.2 (Build ID: 400m0(Build:2))

The bug is still tha same as for years.
Ctrl + drag & drop copy the image, but sometimes it is not visible.
Usually, copying to the right makes the copied image visible, but copying to the left, up, make the copied image not visible. In any case, a print preview makes the copied image visible.
This is a very old bug, but I can handle it since the print preview restore the display as it should be.

Thank you for your developpment,  Bernard Gisin.
Comment 8 Jean-Baptiste Faure 2013-12-01 16:37:43 UTC
Please do not change the version number, it shows the oldest version in which the bug has been seen.

Best regards. JBF
Comment 9 Cor Nouws 2014-06-22 13:10:04 UTC
*** Bug 66878 has been marked as a duplicate of this bug. ***
Comment 10 tommy27 2014-06-29 09:39:02 UTC
retested under Win7x64
still reproducible with 4.4.0.0.alpha0+
Build ID: 95272e7e5b7e38753ab07dbd6503b7cfa2974842
TinderBox: Win-x86@42, Branch:master, Time: 2014-06-26_23:01:43
Comment 11 tommy27 2014-06-29 09:42:22 UTC
issue reproducible in OOo 3.3.0 and AOO 4.1 so it's inherited from OOo codeline.
Comment 12 Jean-Baptiste Faure 2014-06-29 10:41:12 UTC
Easier workaround: ctrl+drag then right click and choose paste.

Best regards. JBF
Comment 13 Buovjaga 2015-03-06 11:38:14 UTC
*** Bug 58245 has been marked as a duplicate of this bug. ***
Comment 14 Buovjaga 2015-03-06 11:38:25 UTC
*** Bug 86876 has been marked as a duplicate of this bug. ***
Comment 15 Ljiljan 2015-08-19 05:22:53 UTC
I figure out when this bug occurs. So, if you draw object and use default object's anchor "to paragraph", then you can't copy object with mouse while holding CTRL. However, if object's anchor is set "to a page", then it works. Does this help at all?
Comment 16 QA Administrators 2016-09-20 10:25:50 UTC Comment hidden (obsolete)
Comment 17 Symurg 2016-09-20 21:36:29 UTC
The bug still exists. 

OS : Ubuntu 16.04 
Version : Libre Office 5.2.1.2
Program : Writer
Comment 18 Bernard Gisin 2016-09-24 15:19:58 UTC
The bug still exist under Libreoffice 4.2.8.2 using linux KUbuntu 14.04, 64 bits.
It also still exist under Libreoffice 5.1.5.2 using Windows 7 32 bits.

As I said in comment 5, the preview button helps after having duplicated an object, to see it.

When duplicating an object on the right, it often works well. If the object is duplicated while going to the left (and up), the duplication is done, but the object is not visible. Doing a preview let the object appear.
Comment 19 Paul McAuley 2016-12-22 22:47:32 UTC
Bug still exists in LibreOffice Writer 5.2.3.3, OpenSUSE Leap 42.2. It only affects Writer and does not seem to exist in Draw, Impress or Calc.
Comment 20 Julien Nabet 2017-07-23 12:40:06 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this with gtk3, gtk, kde4 and gen rendering.
I noticed that if I add some text and type "Enter", the copied shape appeared.
So it seems it forces refresh display in a way.
I suppose this refresh is triggered by "display preview", that's why the clone appears after this action.

Caolán: thought you might be interested in this one since it concerns rendering so I suppose vcl.
It could also help too for more specific tdf#109277
Comment 21 Caolán McNamara 2017-07-26 15:13:54 UTC
https://gerrit.libreoffice.org/#/c/40457/ seems to work for me wrt this
Comment 22 Commit Notification 2017-08-03 12:31:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe3b0468884c3206f527f2afffbcb25482232452

Resolves: tdf#33692 drawing objects not visible after creation via ctrl+drag

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2017-08-10 13:09:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=93887dc0ecd805754b106a8e2e6fa90d315d2491&h=libreoffice-5-4

Resolves: tdf#33692 drawing objects not visible after creation via ctrl+drag

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Xisco Faulí 2017-09-11 08:13:27 UTC Comment hidden (obsolete)
Comment 25 Xisco Faulí 2017-11-05 21:52:10 UTC
A polite ping to Caolán McNamara: is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Thanks
Comment 26 Bernard Gisin 2017-11-19 10:44:38 UTC
Hello,
I tested the version 5.4 on two versions of Libreoffice Writer and could not reproduce the "Drag & Drop copy" problem.
So it seems that this problem is solved, 
I use and promote Libreoffice around my friends and at my work.

Thank you very much for the work.