Resolves: tdf#33692 drawing objects not visible after creation via ctrl+drag

Reviewed-on: https://gerrit.libreoffice.org/40457
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit fe3b0468884c3206f527f2afffbcb25482232452)

Change-Id: Iecdff08b36ebee0135c6cac1882702fc4d6dd087
Reviewed-on: https://gerrit.libreoffice.org/40715
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>